--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "jose": "^5.2.4",
-    "node-forge": "^1.3.1"
+    "jose": "^5.2.4"
   }
 }
